Progress on platform specific things

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,8 +23,6 @@ message(STATUS "SOURCES: ${SOURCES}")
 # Depending on the OS use different main.cpp (e.g: engine/platform/win32/main.cpp)
 if (WIN32)
     add_executable(vk42 "engine/platform/win32/main.cpp" ${SOURCES})
-elseif(APPLE)
-    add_executable(vk42 "engine/platform/darwin/main.cpp" ${SOURCES})
-elseif(UNIX AND NOT APPLE)
-    add_executable(vk42 "engine/platform/linux/main.cpp" ${SOURCES})
+elseif(UNIX)
+    add_executable(vk42 "engine/platform/unix/main.cpp" ${SOURCES})
 endif()
